blacklists: fix blacklisted posts being briefly visible.
Fix the long-standing bug where a blacklisted post would be visible for a split-second before being
hidden.

This makes all images hidden by default and then unhidden if they're not blacklisted. This may lead
to a different kind of loading jank where, instead of posts being visible for a split-second,
they're first hidden then they appear a split-second later. This will be true even if nothing is
blacklisted. If you have a very long blacklist that takes a long time to process, this will be
especially noticeable as images are only unhidden after your blacklist is processed.

This also means that if Javascript is broken, usually because the user is using a very old browser,
then images won't be visible at all.

--- a/app/components/blacklist_component/blacklist_component.scss
+++ b/app/components/blacklist_component/blacklist_component.scss
@@ -11,3 +11,7 @@
     filter: blur(var(--blacklist-blur-amount, 40px)) !important;
   }
 }
+
+.post-preview:not(.blacklisted), .image-container:not(.blacklisted) {
+  visibility: hidden;
+}
